# isotropic_remesher

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg
examples/: pig.py  sphere.py  sphere_0.py  sphere_1.py  sphere_2.py  sphere_3.py  sphere_4.py  sphere_5.py  sphere_input.py
src/isotropic_remesher/: __init__.py  core.py  utils.py
