[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isotropic_remesher"
version = "0.0.1"
authors = [
  { name="Santiago Federico Caracciolo", email="santiago.caracciolo@gmail.com" },
]
description = "Isotropic remeshing algorithm for ECGI data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]